# Cards

./: .gitignore  DATABASE_INTEGRATION_COMPLETE.md  DEPLOYMENT.md  Makefile  PERFORMANCE_OPTIMIZATIONS.md  README.md  deploy.sh  dev.sh  docker-compose.yaml  package-lock.json  package.json
backend/: Cargo.toml  Dockerfile
backend/migrations/: 20250101000000_init.sql  20250127000000_game_elo_changes.sql  20250128000000_player_settings.sql  20260305000000_fix_player_settings_case.sql
backend/src/: main.rs  models.rs  notifications.rs  tasks.rs
backend/src/db/: core.rs  elo.rs  games.rs  leaderboard.rs  mod.rs  players.rs  settings.rs
backend/src/routes/: admin.rs  common.rs  elo.rs  games.rs  leaderboard.rs  mod.rs  players.rs
backend/src/services/: color_whist_service.rs  double_king_service.rs  game_service.rs  hearts_service.rs  king_service.rs  manille_service.rs  mod.rs  press_service.rs  whist_service.rs
docs/: API.md  ARCHITECTURE.md  DATABASE.md  DEVELOPMENT.md
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.vue  env.d.ts  i18n.ts  main.ts  style.css
frontend/src/api/: games.ts
frontend/src/components/: DeleteConfirmModal.vue  LanguageSelector.vue  PlayerPickerModal.vue  RoundDetailCard.vue  ScoreSummaryChips.vue  Settings.vue  SiteFooter.vue  WinnerModal.vue
grafana/: README.md
grafana/dashboards/: card-game-scorer.json
k8s/: backend-deployment.yaml  frontend-deployment.yaml  frontend-ingressroute.yaml  grafana-datasource-postgres.yaml  ingress.yaml  namespace.yaml  postgres-deployment.yaml
(+108 files in other folders)
